# apps/api/database/factories/InstitutionFactory.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace Database\Factories;
+
+use App\Models\Institution;
+use Illuminate\Database\Eloquent\Factories\Factory;
+
+/**
+ * @extends Factory<Institution>
+ */
+class InstitutionFactory extends Factory
+{
+    /**
+     * Define the model's default state.
+     *
+     * @return array<string, mixed>
+     */
+    public function definition(): array
+    {
+        return [
+            'name' => fake()->company(),
+            'code' => strtoupper(fake()->bothify('???###')),
+            'address' => fake()->address(),
+            'type' => fake()->randomElement(['government', 'aided', 'private']),
+        ];
+    }
+}
