# apps/api/routes/api.php
@@ -15,8 +15,9 @@ Route::middleware('web')->group(function () {
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/user', [AuthController::class, 'user']);
+    Route::post('/user/current-institution', [AuthController::class, 'setCurrentInstitution']);
     Route::apiResource('institutions', InstitutionController::class);
-    Route::apiResource('institutions.programs', ProgramController::class);
-    Route::apiResource('institutions.programs.students', StudentController::class);
-    Route::apiResource('institutions.programs.subjects', SubjectController::class);
+    Route::apiResource('institutions.programs', ProgramController::class)->scoped();
+    Route::apiResource('institutions.programs.students', StudentController::class)->scoped();
+    Route::apiResource('institutions.programs.subjects', SubjectController::class)->scoped();
 });
